# total-monitoring-system

./: .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
prisma/: schema.prisma
public/tv/: index.html  tv.css  tv.js
scripts/: build-standalone.js  init-db.js  tv-screenshot.js  tv-seed.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sub-windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx
src/app/(dashboard)/alarms/: page.tsx
src/app/(dashboard)/settings/: page.tsx
src/components/alarms/: alarm-filter-panel.tsx  alarms-client.tsx
src/components/cards/: alarm-card.tsx
src/components/forms/: ingest-options-inline.tsx  sensor-basic-info-bar.tsx  system-basic-info-bar.tsx  system-detail-header.tsx  ups-basic-info-bar.tsx  ups-detail-header.tsx
src/components/layout/: auto-open-windows.tsx  dashboard-layout-client.tsx  header-with-status.tsx  ingestion-status-banner.tsx  sidebar.tsx  window-highlight-overlay.tsx
src/components/realtime/: realtime-provider.tsx  realtime-temperature.tsx  realtime-ups.tsx
src/components/settings/: data-management-card.tsx  feature-settings-card.tsx  siren-settings-card.tsx
src/lib/: db.ts  logger.ts  siren.ts  threshold-evaluator.ts  validate-custom-code.ts  ws-notify.ts
src/types/: index.ts
src/worker/: binding.ts  config.ts  db-updater.ts  index.ts  ingest-queue.ts  liveness.ts  mqtt-listener.ts  parser.ts  port-stats.ts  siren-trigger.ts  tcp-listener.ts  udp-listener.ts  websocket-server.ts
(+11 files in other folders)
