[package]
name = "tms-portable"
version = "0.1.0"
description = "통합알람감시체계 - Windows Portable"
authors = ["chelly1221"]
edition = "2021"

[lib]
name = "tms_portable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
dunce = "1"
